--- a/index.html
+++ b/index.html
@@ -661,14 +661,10 @@
     <!-- End Footer -->
     <div class="alert text-center cookieAlert" role="alert">
         <p>
-            Your personal data will be processed and information from your device
-            (cookies, unique identifiers and other device data) may be stored by,
-            accessed by and shared with third-party vendors, or used specifically by this site or app.
+            This site might use cookies to personalize content and analyze access.
         </p>
         <p>
-            Some vendors may process your personal data on the basis of legitimate interest,
-            which you can object to by managing your options below. Look for a link at the
-            bottom of this page or in our privacy policy where you can withdraw consent.
+            No data will accessed by or shared with any third-party vendor or used for Tracking users.
         </p>
 
         <p>
