--- a/index.html
+++ b/index.html
@@ -119,16 +119,10 @@
                             <div class="banner-content text-center col-lg-5 col-5 m-lg-auto text-left pb-5">
                                 <h1
                                     class="banner-heading text-white display-4 mb-0 pb-3 mx-0 px-0 typo-space-line-center">
-                                    Unique expertise and asistance for small and large customers
+                                    Unique Field Expertise
                                 </h1>
                                 <p class="banner-body py-5 text-white fs-5">
-                                    <img src="assets/img/qxip-logo-new.png" height="32px" alt=""> is able to provide
-                                    large and small
-                                    customers with
-                                    unique expertise and assistance with planning, design,
-                                    installation, customization and integration of its products
-                                    and has worked with some of the largest and most complex
-                                    operators and enterprises worldwide.
+                                    <img src="assets/img/qxip-logo-new.png" height="32px" alt=""> provides its customers with the unique expertise accumulated serving some of the largest and most complex operators and enterprises worldwide.
                                 </p>
                                 <a class="banner-button btn rounded-pill btn-outline-primary btn-lg px-4"
                                     href="getstarted.html" role="button">Get Started</a>
@@ -178,7 +172,7 @@
                         <div class="row d-flex align-items-center ">
                             <div class="banner-content col-lg-8 col-8 offset-2 m-lg-auto py-3 pb-5 text-center">
                                 <p class="display-5 text-white">
-                                    A robust, carrier-grade and modular<br /> VoIP and RTC Capture Framework
+                                    100% Open-Source<br/>VoIP and RTC Monitoring Framework
                                 </p>
                                 <p class="banner-body text-white pb-5 fs-5">
                                     <strong class="text-danger fs-3 fw-bold">homer</strong> is part of the
@@ -197,21 +191,14 @@
                         <div class="py-5 row d-flex align-items-center">
                             <div class="banner-content col-lg-8 col-8 offset-2 m-lg-auto text-left py-5 pb-5">
                                 <h1 class="banner-heading text-white display-3  mb-0 pb-3 mx-0 px-0 typo-space-line">
-                                    RTC Troubleshooting just got <strong class="fw-bold"><span
+                                    Discover <strong class="fw-bold"><span
                                             style="color:#1DC27C">h</span>epic.</strong>
                                 </h1>
                                 <div class="row">
                                     <div class="col-7">
                                         <p class="banner-body py-5 text-white fs-5">
-                                            <strong class="fs-3"><span style="color:#1DC27C">h</span>epic</strong> was
-                                            crafted for the modern Telco from the ground up to provide all the critical
-                                            features and shipping full of advanced features,
-                                            including Real-Time Session Tracking, RTP Analyzers, Cross-Protocol
-                                            Correlation,
-                                            Group Aggregations, Big-Data, Intelligent Alerting, Partitioning,
-                                            Clustering and much more. All fully compatible with our
-                                            existing Open-Source HEP Stack and Agents,delivering the best of both
-                                            worlds.
+                                            <strong class="fs-3"><span style="color:#1DC27C">h</span>epic</strong> 
+                                            is our top tier product shipping with features such as Real-Time Protocol & Session Tracking, RTP Analysis, Scriptable Correlation, Big-Data and Timeseries Tagging, Clustering and so much more. 
                                         </p>
                                     </div>
                                     <div class="col-5 text-center">
@@ -220,7 +207,7 @@
                                                 alt="">
                                         </figure>
                                         <a class="banner-button btn rounded-pill btn-outline-primary btn-lg px-4"
-                                            href="https://hepic.tel" target="_blank" role="button">More Information</a>
+                                            href="https://hepic.tel" target="_blank" role="button">Book a Demo</a>
                                     </div>
                                 </div>
 
