--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                                 <p class="banner-body py-5 text-white fs-5">
                                     <img src="assets/img/qxip-logo-new.png" height="32px" alt=""> is a go-to vendor for
                                     VoIP/RTC Packet
-                                    Capture, Monitoring<br />
-                                    and Troubleshooting technologies, leveraging its unique design know-how<br /> and
+                                    Capture, Monitoring 
+                                    and Troubleshooting technologies, leveraging its unique design know-how and
                                     widely adopted framework of
                                     <a class="banner-link" href="http://sipcapture.org" target="_blank">open-source</a>
                                     and <a class="banner-link" href="https://hepic.tel" target="_blank">commercial</a>
@@ -175,11 +175,9 @@
                                     100% Open-Source<br/>VoIP and RTC Monitoring Framework
                                 </p>
                                 <p class="banner-body text-white pb-5 fs-5">
-                                    <strong class="text-danger fs-3 fw-bold">homer</strong> is part of the
+                                    you might know us for <strong class="text-danger fs-3 fw-bold">homer</strong>, part of the ever growing 
                                     <a class="banner-link text-danger fw-bold" href="http://sipcapture.org"
-                                        target="_blank">SIPCAPTURE</a> stack,
-                                    developed for Analysis<br /> and Monitoring with native support for all major
-                                    OSS Voice platforms and vendor-agnostic Capture agents.
+                                        target="_blank">hep</a> stack, our flagship project with native support in all major voice platforms and a wonderful community of users
                                 </p>
                                 <a class="text-end banner-button btn rounded-pill btn-outline-primary btn-lg px-4"
                                     href="http://sipcapture.org" target="_blank" role="button">More Information</a>
@@ -191,14 +189,14 @@
                         <div class="py-5 row d-flex align-items-center">
                             <div class="banner-content col-lg-8 col-8 offset-2 m-lg-auto text-left py-5 pb-5">
                                 <h1 class="banner-heading text-white display-3  mb-0 pb-3 mx-0 px-0 typo-space-line">
-                                    Discover <strong class="fw-bold"><span
+                                    discover <strong class="fw-bold"><span
                                             style="color:#1DC27C">h</span>epic.</strong>
                                 </h1>
                                 <div class="row">
                                     <div class="col-7">
                                         <p class="banner-body py-5 text-white fs-5">
                                             <strong class="fs-3"><span style="color:#1DC27C">h</span>epic</strong> 
-                                            is our top tier product shipping with features such as Real-Time Protocol & Session Tracking, RTP Analysis, Scriptable Correlation, Big-Data and Timeseries Tagging, Clustering and so much more. 
+                                            is our top tier product shipping with features such as Real-Time Protocol & Session Tracking, RTP Analysis, Scriptable Correlation, Custom Tagging, Big-Data and Timeseries emitters, Clustering and so much more. 
                                         </p>
                                     </div>
                                     <div class="col-5 text-center">
